--- a/app/assets/stylesheets/pages/_custom_invitations.scss
+++ b/app/assets/stylesheets/pages/_custom_invitations.scss
@@ -72,7 +72,8 @@
       }
       .line {
         height: 1px;
-        width: 64px;
+        width: 48px;
+        opacity: .6;
         background-color: $gray;
       }
     }
