--- a/app/assets/stylesheets/pages/_profile_new.scss
+++ b/app/assets/stylesheets/pages/_profile_new.scss
@@ -78,7 +78,8 @@
     }
     .line {
       height: 1px;
-      width: 64px;
+      width: 48px;
+      opacity: .6;
       background-color: $gray;
     }
   }
