--- a/app/views/pages/_manager_settings.html.erb
+++ b/app/views/pages/_manager_settings.html.erb
@@ -12,7 +12,7 @@
         <div class="form-group relative">
           <%= f.input :email, placeholder: "Email address..", label: "Manage users", input_html: { class: "relative w-100", name: "user[email]"  }, wrapper_html: { class: "w-100" }, label_html: { class: "uppercase mb-1 textLightBlack textBetween"}, required: false %>
           <%= button_tag type: "submit" do %>
-            <%= image_tag "icons/person-add.svg", alt: "alttext", id: "invitation-add-btn", width: 28, height: 28, class: "mt-1" %>
+            <%= image_tag "icons/person-add.svg", alt: "alttext", id: "invitation-add-btn", width: 20, height: 28, class: "mt-1 mr-2" %>
           <% end %>
         </div>
       <% end %>
