--- a/app/views/shared/_manager_invite_modal.html.erb
+++ b/app/views/shared/_manager_invite_modal.html.erb
@@ -10,7 +10,7 @@
         <div class="form-group relative">
           <%= f.input :email, placeholder: "Email address..", label: false, input_html: { class: "relative", name: "user[email]"  } %>
           <%= button_tag type: "submit" do %>
-            <%= image_tag "icons/person-add.svg", alt: "alttext", id: "invitation-add-btn", width: 28, height: 28, class: "mt-1" %>
+            <%= image_tag "icons/person-add.svg", alt: "alttext", id: "invitation-add-btn", width: 20, height: 28, class: "mt-1 mr-2" %>
           <% end %>
         </div>
       <% end %>
