--- a/app/assets/stylesheets/components/_tom_select.scss
+++ b/app/assets/stylesheets/components/_tom_select.scss
@@ -6,6 +6,11 @@
 	box-shadow: unset;
 	height: 40px !important;
 
+	&.focus {
+		outline: $blue auto 1px;
+		background: white;
+	}
+
 	.item {
 		@extend .shadow, .py-1;
 
