change submit input to button

--- a/app/views/bookings/_filter_content.html.erb
+++ b/app/views/bookings/_filter_content.html.erb
@@ -30,7 +30,7 @@
         <%# DUMMY BUTTON FOR NOW %>
         <button class="btn btn-float" style="user-select: none">Saved</button>
       </div>
-      <%= f.submit "Show results", class: "uppercase btn btn-primary w-100 py-3" %>
+      <button class="uppercase btn btn-primary w-100 py-3" type="submit">Show results</button>
     <% end %>
   </section>
 </div>
