fix content hide on tom select expertise

--- a/app/assets/stylesheets/components/_tom_select.scss
+++ b/app/assets/stylesheets/components/_tom_select.scss
@@ -6,6 +6,10 @@
 	box-shadow: unset;
 	height: 40px !important;
 
+	&.big {
+		height: 80px !important;
+	}
+
 	.item {
 		@extend .shadow, .py-1;
 
