link to reassign

--- a/app/views/bookings/edit.html.erb
+++ b/app/views/bookings/edit.html.erb
@@ -12,6 +12,9 @@
             <%= link_to new_profile_booking_path("no_profile", parent_id: @booking.id, select: true), class: "action-link" do %>
               <%= image_tag "icons/copy.svg", alt: "copy icon", width: 22, height: 22, class: "vertical-align-middle" %> Duplicate
             <% end %>
+            <%= link_to new_profile_booking_path("no_profile", parent_id: @booking.id, select: true, reassign: true), class: "action-link" do %>
+              <%= image_tag "icons/re-assign.svg", alt: "copy icon", width: 22, height: 22, class: "vertical-align-middle" %> Re-assign
+            <% end %>
             <% convo ||= Conversation.find_by(manager: @booking.manager, profile: @booking.profile) %>
             <% if convo %>
               <%= link_to conversation_path(convo, booking_id: @booking.id, anchor: "message-#{convo.messages.last&.id}"), class: "action-link" do %>
