--- a/app/views/bookings/new.html.erb
+++ b/app/views/bookings/new.html.erb
@@ -26,6 +26,9 @@
     <div class="bookingCard">
       <% url = @select ? profile_bookings_path("no_profile", select: true) : profile_bookings_path(@profile) %>
       <%= simple_form_for [Profile.new, @booking], url: url do |f| %>
+        <% if @reassign %>
+          <input type="hidden" name="reassign" value=<%= @reassign %> id="reassign" />
+        <% end %>
         <% if @select %>
           <%= f.input :profile_id,
                       collection: @network.map { |profile| [profile.user.display_name, profile.id] },
