--- a/app/assets/stylesheets/components/_widget.scss
+++ b/app/assets/stylesheets/components/_widget.scss
@@ -17,7 +17,8 @@
 			background-color: $flat-yellow-3;
 		}
 
-		&.rejected {
+		&.rejected,
+		&.canceled {
 			background-color: $flat-red-4;
 		}
 	}
