--- a/app/views/profiles/_general_profile.html.erb
+++ b/app/views/profiles/_general_profile.html.erb
@@ -80,11 +80,11 @@
       <!-- Message Button -->
       <% conversation ||= current_user.conversation_with(@profile.user) %>
       <% if conversation %>
-        <%= link_to conversation_path(conversation, anchor: "message-#{conversation.messages.last&.id}"), class: "btn-lg px-0 btn-white" do %>
+        <%= link_to conversation_path(conversation, anchor: "message-#{conversation.messages.last&.id}", from: "prof_show"), class: "btn-lg px-0 btn-white" do %>
           <%= image_tag "icons/message.svg", alt: "message" %> MESSAGE
         <% end %>
       <% else %>
-        <%= link_to profile_conversations_path(@profile, conversation: { profile_id: @profile.id }), method: :post, class: "btn-lg px-0 btn-white" do %>
+        <%= link_to profile_conversations_path(@profile, conversation: { profile_id: @profile.id }, from: "prof_show"), method: :post, class: "btn-lg px-0 btn-white" do %>
           <%= image_tag "icons/message.svg", alt: "message" %> MESSAGE
         <% end %>
       <% end %>
