--- a/app/assets/stylesheets/components/_widget.scss
+++ b/app/assets/stylesheets/components/_widget.scss
@@ -22,6 +22,11 @@
 		}
 	}
 
+  .booking-description {
+    max-width: 100%;
+    line-break: anywhere;
+  }
+
 	.box {
 		@extend .rounded, .items-center, .mb-3;
 
@@ -48,10 +53,12 @@
 
 			&.reject {
 				@extend .gradient-red;
+        height: 40px;
 			}
 
 			&.accept {
 				@extend .gradient-green;
+        height: 40px;
 			}
 		}
 	}
