--- a/app/views/bookings/_widget.html.erb
+++ b/app/views/bookings/_widget.html.erb
@@ -1,4 +1,4 @@
-<div class="booking-widget rounded shadow" id="message-<%= message.id %>">
+<div class="booking-widget rounded shadow pb-3" id="message-<%= message.id %>">
   <div class="flex justify-content-between items-center title <%= booking.status %>">
     <h3 class="m-0"><%= booking.title %></h3>
     <div class="flex items-center">
@@ -35,15 +35,15 @@
           </div>
         </div>
 
-        <button type="button" class="trigger" data-id="<%= booking.id %>"><%= image_tag "icons/more.svg", alt: "menu", width: 16, height: 16 %></button>
+        <button type="button" class="trigger pt-2" data-id="<%= booking.id %>"><%= image_tag "icons/more.svg", alt: "menu", width: 24, height: 24 %></button>
       </div>
     </div>
   </div>
 
   <div class="px-3 pb-3">
-    <div class="box">
+    <div class="box p-2">
       <div class="flex items-center justify-content-center">
-        <div class="flex flex-column mr-2">
+        <div class="flex flex-column mr-2 py-2">
           <p class="m-0 textSm textLightBlack uppercase"><%= booking.start_date.strftime("%b") %></p>
           <p class="m-0 textLg bold"><%= booking.start_date.strftime("%d") %></p>
         </div>
@@ -56,24 +56,30 @@
         </div>
       </div>
       <div class="flex flex-column justify-content-center items-start pl-4 bg-blueish-gray rounded h-100">
-        <p class="uppercase m-0 bold"><%= booking.number_of_days %> days</p>
+        <p class="uppercase m-0 bold textBetween"><%= booking.number_of_days %> days</p>
         <p class="m-0 textSm textLightBlack uppercase"><%= booking.short_date_time %></p>
       </div>
     </div>
 
-    <div class="box">
+    <div class="box p-2">
       <% currency ||= currency_mapper(current_user.preferred_currency) %>
-      <div class="flex flex-column justify-content-center items-center mr-2">
+      <div class="flex flex-column justify-content-center items-center mr-2 p-2">
         <p class="m-0 textSm textLightBlack uppercase">Total price</p>
         <p class="m-0 textLg bold"><%= currency %> <%= booking.converted_total_price(ExchangeRate.new(current_user).call) %></p>
       </div>
       <div class="flex flex-column justify-content-center items-start pl-4 bg-blueish-gray rounded h-100">
-        <p class="uppercase m-0 bold"><%= currency %><%= booking.pricing_text %></p>
+        <p class="uppercase m-0 bold textBetween"><%= currency %><%= booking.pricing_text %></p>
         <p class="m-0 textSm textLightBlack uppercase"><%= currency %><%= booking.price %> per day</p>
       </div>
     </div>
 
-    <p class="my-3"><%= booking.description %></p>
+
+    <% if booking.description.length >= 100 %>
+      <p class="my-3 truncated-description booking-description textLightBlack"><%= booking.description.truncate(100) %> <span class="textBlue continue-reading">Continue reading</span></p>
+      <p class="my-3 none full-description booking-description textLightBlack"><%= booking.description %></p>
+    <% else %>
+      <p class="my-3 booking-description textLightBlack"><%= booking.description %></p>
+    <% end %>
     <% if booking.attachments.attached? %>
       <div class="flex flex-column">
         <% booking.attachments.each do |attachment| %>
@@ -117,3 +123,5 @@
     <%= link_to "Cancel", booking_cancel_path(booking), method: :patch, class: "btn btn-float red text-center" %>
   <% end %>
 </div>
+
+
