--- a/app/assets/stylesheets/pages/_booking_edit.scss
+++ b/app/assets/stylesheets/pages/_booking_edit.scss
@@ -30,7 +30,8 @@
 	.booking_attachments {
 		@extend .flex, .justify-content-center, .items-center, .py-2;
 
-		border: 3px solid $flat-gray-3;
+		border: 1px solid $flat-gray-3;
+		letter-spacing: 2px;
 		border-radius: 8px;
 
 		label {
