normalize styling of <BookingForm /> with bookings#edit

--- a/app/assets/stylesheets/components/_booking_card.scss
+++ b/app/assets/stylesheets/components/_booking_card.scss
@@ -27,7 +27,7 @@
 	}
 
 	.choose-file {
-		border: 1px solid #d3d3d3;
+		border: 1px solid $flat-gray-3;
 		padding: 8px 24px;
 		cursor: pointer;
 		background: white;
