--- a/app/assets/stylesheets/components/_booking_form.scss
+++ b/app/assets/stylesheets/components/_booking_form.scss
@@ -73,6 +73,28 @@
 		font-size: 14px;
 	}
 
+	.booking-attachments {
+		@extend .rounded;
+
+		border: 1px solid $flat-gray-3;
+
+		.choose-file {
+			padding: 8px 24px;
+			cursor: pointer;
+			background: white;
+			border-radius: 8px;
+			display: flex;
+			justify-content: center;
+			align-items: center;
+			letter-spacing: 2px;
+
+			img {
+				height: 32px;
+				width: 32px;
+			}
+		}
+	}
+
 	.separator {
 		@extend .my-3;
 
