remove "current" text

--- a/app/views/pages/_freelancer_dashboard.html.erb
+++ b/app/views/pages/_freelancer_dashboard.html.erb
@@ -4,7 +4,7 @@
       <h3 class="mt-0 mb-1 textMd">Bookings</h3>
     <% else %>
       <h3 class="mt-0 mb-4 textMd textBlue">
-        Your current bookings will appear here
+        Your bookings will appear here
       </h3>
     <% end %>
     <% if @bookings_count.positive? %>
