--- a/app/views/pages/_manager_dashboard.html.erb
+++ b/app/views/pages/_manager_dashboard.html.erb
@@ -10,7 +10,7 @@
       <h3 class="mt-0 mb-1 textMd">Bookings</h3>
     <% else %>
       <h3 class="mt-0 mb-4 textMd textBlue">
-        Your current bookings will appear here
+        Your bookings will appear here
       </h3>
     <% end %>
     <% if @today_booked_profiles.size.positive? %>
@@ -71,7 +71,7 @@
     <% if @jobs_count.positive? %>
       <h3 class="mt-0 mb-1 textMd">Job posts</h3>
     <% else %>
-      <h3 class="mt-0 mb-4 textMd textBlue">Your current job posts will appear here</h3>
+      <h3 class="mt-0 mb-4 textMd textBlue">Your job posts will appear here</h3>
     <% end %>
 
     <% if @jobs_count.positive? %>
