--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -58,13 +58,19 @@ span {
 }
 
 .turbolinks-progress-bar {
-  height: 16px;
-  color: $blue;
-  opacity: .6;
+	height: 16px;
+	color: $blue;
+	opacity: 0.6;
 }
 
-@supports (padding-top: constant(safe-area-inset-top))  {
-    body {
-        padding-top: (env(safe-area-inset-top), 0);
-    }
+.fixed-bottom {
+	position: fixed;
+	width: 100%;
+	bottom: 60px;
+}
+
+@supports (padding-top: constant(safe-area-inset-top)) {
+	body {
+		padding-top: (env(safe-area-inset-top), 0);
+	}
 }
