--- a/app/assets/stylesheets/components/_booking_card.scss
+++ b/app/assets/stylesheets/components/_booking_card.scss
@@ -32,13 +32,14 @@
 		cursor: pointer;
 		background: white;
 		border-radius: 8px;
-		display: flex;
+		display: flex !important;
 		justify-content: center;
 		align-items: center;
 		letter-spacing: 2px;
 		img {
-			height: 32px;
-			width: 32px;
+			@extend .mr-2;
+			height: 24px;
+			width: 24px;
 		}
 
 		@extend .mt-3;
