--- a/app/assets/stylesheets/components/_booking_form.scss
+++ b/app/assets/stylesheets/components/_booking_form.scss
@@ -60,11 +60,16 @@
 			.border-box;
 
 		background: $blueish-gray;
-		height: 40px;
+		height: 48px;
 
 		button {
+			font-weight: normal;
 			text-transform: none;
 			color: #898994;
+
+			&.btn-white {
+				color: $flat-dark-1 !important;
+			}
 		}
 	}
 
@@ -79,18 +84,23 @@
 		border: 1px solid $flat-gray-3;
 
 		.choose-file {
+			@extend .border-box;
+
 			padding: 8px 24px;
 			cursor: pointer;
 			background: white;
 			border-radius: 8px;
-			display: flex;
+			display: flex !important;
 			justify-content: center;
 			align-items: center;
 			letter-spacing: 2px;
+			height: 48px;
 
 			img {
-				height: 32px;
-				width: 32px;
+				@extend .mr-2;
+
+				height: 24px;
+				width: 24px;
 			}
 		}
 	}
@@ -98,7 +108,7 @@
 	.separator {
 		@extend .my-3;
 
-		border-top: 2px solid $blueish-gray;
+		border-top: 1px solid $blueish-gray;
 	}
 
 	button[type="submit"] {
