--- a/app/views/bookings/edit.html.erb
+++ b/app/views/bookings/edit.html.erb
@@ -85,6 +85,7 @@
           </div>
           <div class="bookingDuration <%= 'none' unless @booking&.duration %>">
             <%= f.input :duration,
+                        collection: (1..8),
                         label: "Hours per day",
                         label_html: { class: "block mb-1 textLightBlack textBetween" },
                         input_html: { class: "w-100" },
@@ -120,7 +121,6 @@
         </div>
         <div id="priceSection" class="mb-3">
           <div class="input-wrapper">
-            <label class="block mb-1 textLightBlack textBetween">Price rate</label>
             <div class="flex items-center">
               <%= f.input :price,
                           label: false,
