--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -7,6 +7,10 @@ input[type="submit"] {
 	background: transparent;
 	-webkit-tap-highlight-color: transparent;
 
+	&:focus {
+		outline: none;
+	}
+
 	&.btn {
 		display: block;
 		text-transform: uppercase;
