--- a/app/assets/stylesheets/components/_skill_pill.scss
+++ b/app/assets/stylesheets/components/_skill_pill.scss
@@ -10,9 +10,15 @@
 	@extend .mr-3, .mb-1, .rounded-md;
 
 	padding: calc(#{$base-spacing - 2px}) $base-spacing;
+	// TODO: Remove on another page
+	box-shadow: 0px 6px 10px rgba(50, 51, 94, 0.15);
 	font-weight: 600;
 	white-space: nowrap;
 	font-size: 12px;
+
+	&.filter {
+		box-shadow: unset;
+	}
 
 	&.blue {
 		background: $blue-2;
