avoid multiple inserts

--- a/app/views/profiles/index.js.erb
+++ b/app/views/profiles/index.js.erb
@@ -31,8 +31,16 @@
       </span>
     `;
 
-    trigger.insertAdjacentHTML("beforeend", template);
+    const filterCount = document.querySelector(".skill-pill.filter");
+
+    if (filterCount) {
+      filterCount.innerText = "<%= @filter_count.to_s.rjust(2, "0") %>"
+    } else {
+      trigger.insertAdjacentHTML("beforeend", template);
+    }
   }
+
+
 
   if (<%= @filter_count.is_a?(Integer) ? @filter_count : 0 %> === 0) {
     const filterCount = document.querySelector(".skill-pill.filter");
