fixed booking rib method and profile filter not takes into account the filtering logic from within sesson

--- a/app/views/profiles/index.html.erb
+++ b/app/views/profiles/index.html.erb
@@ -1,4 +1,4 @@
-<div class="profiles-index relative">
+<div class="profiles-index relative" data-filter-count="<%= @filter_count %>">
   <section class="head">
     <div style="width: 28px;"></div>
     <p class="textBetween semi-bold">FREELANCERS</p>
