fixing layout and go back link:

--- a/app/views/profiles/_filter_content.html.erb
+++ b/app/views/profiles/_filter_content.html.erb
@@ -41,13 +41,14 @@
           </section>
         </div>
       </section>
-
-      <div class="mt-5 mb-3 mx-3 px-3 flex justify-content-between">
-        <button type="submit" name="profile[clear]" value="true" id="clear" class="btn btn-float red">Clear</button>
-        <%# DUMMY BUTTON FOR NOW %>
-        <button class="btn btn-float" style="user-select: none">Saved</button>
+      <div class="submit-wrapper">
+        <div class="m4-5 mb-3 mx-3 px-3 flex justify-content-between">
+          <button type="submit" name="profile[clear]" value="true" id="clear" class="btn btn-float red">Clear</button>
+          <%# DUMMY BUTTON FOR NOW %>
+          <button class="btn btn-float" style="user-select: none">Saved</button>
+        </div>
+        <%= f.submit "Show results", class: "uppercase btn btn-primary w-100 py-3 height-unset" %>
       </div>
-      <%= f.submit "Show results", class: "uppercase btn btn-primary w-100 py-3 height-unset" %>
     <% end %>
   </section>
 </div>
