jobs-new layout

--- a/app/assets/stylesheets/config/utilities/_display.scss
+++ b/app/assets/stylesheets/config/utilities/_display.scss
@@ -239,3 +239,11 @@ fieldset {
 .bg-gray {
 	background: rgba(20, 15, 38, 0.5) !important;
 }
+
+.h-64 {
+  height: 64px;
+}
+
+.big-margin-bottom {
+  margin-bottom: 128px;
+}
