--- a/app/assets/stylesheets/pages/_schedule.scss
+++ b/app/assets/stylesheets/pages/_schedule.scss
@@ -29,7 +29,7 @@ $day-border: 1px solid #e8e9eb;
 			position: fixed;
 			width: 100%;
 			height: 100vh;
-			z-index: 3;
+			z-index: 5;
 			left: 0;
 			top: 0;
 
@@ -65,7 +65,7 @@ $day-border: 1px solid #e8e9eb;
 			.selector-wrapper {
 				@extend .shadow, .p-2, .rounded;
 
-				z-index: 3;
+				z-index: 4;
 				position: absolute;
 				bottom: -100px;
 				left: calc((100vw - 320px) / 2);
@@ -120,7 +120,7 @@ $day-border: 1px solid #e8e9eb;
 			.profiles {
 				@extend .sticky;
 
-				z-index: 2;
+				z-index: 3;
 				left: 0;
 				background: white;
 			}
@@ -275,19 +275,41 @@ $day-border: 1px solid #e8e9eb;
 						&.dark-border-right {
 							border-right: 1px solid #dfe5ee;
 						}
+
+						.event {
+							&.no-weekends {
+								&::before {
+									border-top-color: transparent;
+								}
+							}
+						}
 					}
 
 					.event {
 						@extend .mb-2, .relative;
 
 						background: $flat-orange-5;
-						border-top: 8px solid $flat-orange-3;
+
 						margin-right: -2px;
 						-ms-overflow-style: none; /* IE and Edge */
 						scrollbar-width: none; /* Firefox */
 
-						.event-details {
+						&::before {
 							@extend .absolute;
+
+							content: "";
+							top: 0;
+							left: 0;
+							height: 8px;
+							width: var(--border-width);
+							border-top: 8px solid $flat-orange-3;
+							z-index: 2;
+							border-top-left-radius: var(--border-top-left-radius);
+							border-top-right-radius: var(--border-top-right-radius);
+						}
+
+						.event-details {
+							@extend .absolute, .mt-1;
 
 							white-space: nowrap;
 							background: $flat-orange-5;
@@ -307,7 +329,10 @@ $day-border: 1px solid #e8e9eb;
 
 						&.red {
 							background: $flat-red-5;
-							border-top-color: $flat-red-3;
+
+							&::before {
+								border-top-color: $flat-red-3;
+							}
 
 							.event-details {
 								background: $flat-red-5;
@@ -316,7 +341,10 @@ $day-border: 1px solid #e8e9eb;
 
 						&.green {
 							background: $flat-green-5;
-							border-top-color: $flat-green-3;
+
+							&::before {
+								border-top-color: $flat-green-3;
+							}
 
 							.event-details {
 								background: $flat-green-5;
