--- a/app/views/profiles/_new_step_one.html.erb
+++ b/app/views/profiles/_new_step_one.html.erb
@@ -7,13 +7,13 @@
       </div>
     </div>
 
-    <div class="profileHeader">
+    <div class="profileHeader mb-3">
         <%= f.input :first_name, required: false, label_html: { class: "textGray mt-3 block" }, input_html: { value: @profile&.user&.first_name, class: "w-100 mt-2 border-box lg" }, wrapper_html: { class: "pr-3"} %>
         <%= f.input :last_name, required: false, label_html: { class: "textGray mt-3 block" }, input_html: { value: @profile&.user&.last_name, class: "w-100 mt-2 border-box lg" }, wrapper_html: { class: "pl-3 overflow-hidden"} %>
       <% end %>
     </div>
 
-    <%= f.input :profession, required: false, label_html: { class: "textGray mt-3 block" }, input_html: { class: "w-100 mt-2 border-box lg" }, wrapper_html: { class: "profession-edit px-3 overflow-hidden"} %>
+    <%= f.input :profession, required: false, label_html: { class: "textGray mt-3 block" }, input_html: { class: "mt-2 border-box lg no-tomselect w-100" }, wrapper_html: { class: "profession-edit px-3 overflow-hidden"} %>
 
     <%= f.input :expertise, label: "Experience level", required: false, label_html: { class: "textGray mt-3 block" }, input_html: { class: "w-100 mt-2 border-box lg", id: "edit_profile_expertise" }, wrapper_html: { class: "px-3 overflow-hidden"}, collection: Profile::EXPERTISES %>
 
