fix error in edit job page

--- a/app/views/jobs/edit.html.erb
+++ b/app/views/jobs/edit.html.erb
@@ -31,11 +31,11 @@
             <%= f.input :start_time, label: false,
                         as: :string,
                         label_html: { class: "block textGray nowrap" },
-                        input_html: { class: "w-100", list: "time-options", autocomplete: false, value: @job.start_time.strftime("%H:%M") } %>
+                        input_html: { class: "w-100", list: "time-options", autocomplete: false, value: @job.start_time&.strftime("%H:%M") } %>
             <span class="self-centered mx-2"> - </span>
             <%= f.input :end_time, label: false,
                         as: :string,
-                        input_html: { class: "w-100", list: "time-options", autocomplete: false, value: @job.end_time.strftime("%H:%M") } %>
+                        input_html: { class: "w-100", list: "time-options", autocomplete: false, value: @job.end_time&.strftime("%H:%M") } %>
           </div>
           <%= render partial: "shared/time_options" %>
         </div>
