styling and new icons

--- a/app/assets/stylesheets/config/utilities/_typography.scss
+++ b/app/assets/stylesheets/config/utilities/_typography.scss
@@ -24,7 +24,7 @@
 }
 
 .textBlue {
-	color: $blue-2;
+	color: $blue-2 !important;
 }
 
 .textDarkGray {
@@ -94,5 +94,5 @@
 }
 
 .letter-spaced {
-  letter-spacing: 2px;
+	letter-spacing: 2px;
 }
