--- a/app/assets/stylesheets/pages/_job_show.scss
+++ b/app/assets/stylesheets/pages/_job_show.scss
@@ -78,4 +78,24 @@
 			}
 		}
 	}
+
+	.choose-file {
+		border: 1px solid $flat-gray-3;
+		padding: 8px 24px;
+		cursor: pointer;
+		background: white;
+		border-radius: 8px;
+		display: flex !important;
+		justify-content: center;
+		align-items: center;
+		letter-spacing: 2px;
+		height: 32px;
+		img {
+			@extend .mr-2;
+			height: 24px;
+			width: 24px;
+		}
+
+		@extend .mt-3;
+	}
 }
