avoid notch on filter ( pwa )

--- a/app/views/profiles/_filter_content.html.erb
+++ b/app/views/profiles/_filter_content.html.erb
@@ -1,5 +1,5 @@
 <div class="h-100">
-  <section class="head">
+  <section class="head pt-4">
     <button class="filter-exit"><%= image_tag "icons/cross.svg", alt: "close" %></button>
     <p>FILTER</p>
     <button style="opacity: 0; user-select: none"><%= image_tag "icons/cross.svg", alt: "close" %></button>
